# amp-se-demos

./: .editorconfig  .gitignore  AGENTS.md  JETBRAINS.md  MASTER_DEMOS.md  PROJECTS.json  README.md  demo-checklist.md  package.json  tsconfig.json
.github/workflows/: ci.yml  demo-ci.yml
AMP_TOOLBOX/: README.md  toolbox.config.json
AMP_TOOLBOX/tools/: amp_apply.sh  demo_customizer.mjs  git_ops_tool.sh  http_request_tool.py  intel_enrich.mjs  profile_loader.mjs  psql_migrate_tool.py  screenshot_tool.py  search_in_repo_tool.py  sf_fetch.mjs
config/: README.md  customer_profile.schema.json  scenario_mapping.yml  use_case_mapping.json
config/profiles/: example_enterprise_security.json  example_fintech.json  example_startup.json
datasets/ecommerce/: orders.csv  products.csv  users.csv
datasets/fintech/: accounts.csv  customers.csv  transactions.csv
datasets/health/: patients.csv
datasets/infrastructure/: nodes.csv
datasets/logistics/: carriers.csv  routes.csv  shipments.csv
docs/: DEMO_CUSTOMIZATION_MANUAL.md  EXTENSIBILITY_PLAN.md  SCENARIO_CUSTOMIZATION_GUIDE.md
projects/11-cpp-trading-sim/: AGENT_NOTES.md  CMakeLists.txt  DEMO_FLOWS.md  README.md
projects/11-cpp-trading-sim/docs/: architecture.puml
projects/11-cpp-trading-sim/scripts/: ci.sh  dev.sh  test.sh
projects/11-cpp-trading-sim/src/: engine.cpp  engine.hpp  main.cpp  order_book.cpp  order_book.hpp
projects/11-cpp-trading-sim/tests/: engine_test.cpp  order_book_test.cpp
scripts/: generate_playbook.ts  reset_all.sh  scenario_engine.ts  setup_all.sh  verify_all.sh
(+118 files in other folders)
